# sisyphus

./: .bazelrc  .gitignore  20250326020918_initialize.sql  BUILD.bazel  CLAUDE.md  Cargo.toml  LICENSE.txt  MODULE.bazel  README.md  defs.bzl  flake.nix
example/: BUILD.bazel  MODULE.bazel
example/echo/: BUILD.bazel  frontend.js  frontend.star
example/production/echo/: index.yaml  ingress.yaml  secrets.yaml  service.yaml
src/: app_run_config.rs  app_run_image.rs  apply_diff.rs  config_image.rs  filter.rs  generate_diff.rs  kubernetes.rs  kubernetes_io.rs  kubernetes_rendering.rs  main.rs  registry_clients.rs  rendering.rs  sisyphus_yaml.rs  sql_types.rs  starlark.rs
src/config_image/: tests.rs
src/generate_diff/: tests.rs
src/kubernetes/: tests.rs
src/kubernetes_io/: tests.rs
src/kubernetes_rendering/: tests.rs
src/registry_clients/: tests.rs
src/rendering/: tests.rs
