load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "sisyphus",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@crates//:allocative",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:console",
        "@crates//:docker-registry",
        "@crates//:docker_credential",
        "@crates//:env_logger",
        "@crates//:futures",
        "@crates//:indicatif",
        "@crates//:json-patch",
        "@crates//:k8s-openapi",
        "@crates//:kube",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:similar",
        "@crates//:sqlx",
        "@crates//:starlark",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "tests",
    crate = "sisyphus",
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)
