[package]
name = "sisyphus"
version = "0.1.0"
edition = "2021"

[dependencies]
allocative = "0.3.4"
anyhow = "1.0.97"
clap = { version = "4.5.33", features = ["derive", "env"] }
console = "0.16.1"
docker-registry = "0.8.0"
docker_credential = "1.3.2"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.1"
json-patch = "4.1.0"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["client", "config", "jsonpatch", "ring", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
similar = "2.7.0"
sqlx = { version = "0.8.3", features = ["any", "mysql", "postgres", "runtime-tokio", "sqlite", "time", "tls-native-tls"] }
starlark = "0.13.0"
tempfile = "3.23.0"
tokio = { version = "1.44.1", features = ["macros", "process"] }
